# flyingsquid

./: pyproject.toml  tasks.py
flyingsquid/: _graphs.py  _lm_parameters.py  _observables.py  _triplets.py  label_model.py
tests/: test_fit.py
